<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="76dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome To Netsmart"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SIGNUP"
                    android:layout_marginTop="40dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:textColor="@color/text"
                    android:textAlignment="center"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gender"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/male"
                            android:textSize="20sp"
                            android:layout_marginLeft="40dp"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/female"
                            android:textSize="20sp"
                            android:layout_marginLeft="40dp"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                <Spinner
                    android:layout_marginLeft="23dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/course"
                    android:entries="@array/Class"
                    android:prompt="@array/Class"
                    android:spinnerMode="dropdown"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:entries="@array/Boards"
                    android:id="@+id/board"
                    android:prompt="@array/Boards"
                    android:spinnerMode="dropdown"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="12dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="20dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/signup"
                    android:layout_gravity="center"
                    android:text="Signup"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Existing One?"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Signin"
                        android:id="@+id/signin"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/text"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>