<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/fraghome_map"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/back_arrow"
                app:titleTextColor="@color/black"
                android:elevation="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title" />
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/otp_head_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_marginLeft="9dp"
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_title"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/otp_head_text"
            tools:ignore="MissingConstraints">
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/otpET1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:textSize="30sp"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/otpET2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:textSize="30sp"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/otpET3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:textSize="30sp"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/otpET4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/resnd_otp"
                android:layout_marginTop="190dp"
                android:layout_marginLeft="95dp"
                 />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>